--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,47 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<% if current_user %>
+  <h3>Organization: <%= @tenant.name %></h3>
+<% else %>
+  <div class="jumbotron">
+    <h2>Welcome to <span class="app-name">The Project Management Application!</span></h2>
+    <p class="lead">Let <em>us manage</em> your code so <em>you can perfect</em> it. Check out our plans to find the right one for your team.</p>
+  </div>
+  <div class="row">
+    <div class="plans clearfix">
+      <div class="col-lg-3 col-lg-offset-3 plan">
+        <h2>Free Plan</h2>
+        <div class="price pull-right">
+          Price: <span class="price-amount">Free</span>
+        </div>
+        <div class="features">
+          <ul>
+            <li>Unlimited file uploads</li>
+            <li>Responsive design</li>
+            <li>Access from anywhere</li>
+            <li>Limited to 1 project</li>
+          </ul>
+        </div><!-- /.features -->
+        <p>
+        <%= link_to 'Sign Up', new_user_registration_path(plan: 'free'), class: 'btn btn-primary sign-up' %>
+        </p>
+      </div><!-- /.col-lg-3 .col-lg-offset-3 .plan -->
+
+      <div class="col-lg-3 plan">
+        <h2>Premium Plan</h2>
+        <div class="price pull-right">
+          Price: <span class="price-amount">$10</span>
+        </div>
+        <div class="features">
+          <ul>
+            <li>Unlimited file uploads</li>
+            <li>Responsive design</li>
+            <li>Access anywhere</li>
+            <li class="extra">Unlimited projects</li>
+          </ul>
+        </div><!-- /.features -->
+        <p>
+        <%= link_to 'Sign Up', new_user_registration_path(plan: 'premium'), class: 'btn btn-primary sign-up' %>
+        </p>
+      </div><!-- /.col-lg-3 .plan -->
+    </div><!-- /.plans .clearfix -->
+  </div><!-- /.row -->
+<% end %>
